# clipserver

./: LICENSE  README.md  pyproject.toml  setup.py
clipserver/: __init__.py  __main__.py  server.py
