[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipserver"
version = "0.1.2"
description = "A web-based clipboard sharing server"
readme = "README.md"
authors = [
    {name = "Clipserver Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
keywords = ["clipboard", "web", "server", "utility"]
dependencies = [
    "pyperclip>=1.8.0",
    "PyYAML>=6.0"  # 新增PyYAML依赖
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/ifabos/clipserver"
"Bug Tracker" = "https://github.com/ifabos/clipserver/issues"

[project.scripts]
clipserver = "clipserver.__main__:main"
